<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/Iniciar_juego"
        android:orderInCategory="100"
        android:title="@string/Iniciarjuego"
        app:showAsAction="never" />
    <item
        android:id="@+id/Configurar"
        android:orderInCategory="100"
        android:title="@string/configurar"
        app:showAsAction="never" />
    <item
        android:id="@+id/Instrucciones"
        android:orderInCategory="100"
        android:title="@string/instrucciones"
        app:showAsAction="never" />
    <item
        android:id="@+id/Seleccion"
        android:orderInCategory="100"
        android:title="@string/seleccion_de_personaje"
        app:showAsAction="never" />
    <item
        android:id="@+id/Salir"
        android:orderInCategory="100"
        android:title="@string/salir"
        app:showAsAction="never" />
</menu>
